@@ -22,7 +22,7 @@
 import logging
 import unittest.mock
 
-import capstone
+import capstone_gt
 import gtirb
 import gtirb_rewriting.utils
 import pytest
@@ -121,7 +121,7 @@ def test_triples():
 
 
 def test_nonterminator_instructions():
-    cs = capstone.Cs(capstone.CS_ARCH_X86, capstone.CS_MODE_64)
+    cs = capstone_gt.Cs(capstone_gt.CS_ARCH_X86, capstone_gt.CS_MODE_64)
     # xor %eax, %eax; ret
     disasm = tuple(cs.disasm(b"\x31\xC0\xC3", 0))
     assert len(disasm) == 2
@@ -139,7 +139,7 @@ def test_nonterminator_instructions():
 
 
 def test_nonterminator_instructions_fallthrough():
-    cs = capstone.Cs(capstone.CS_ARCH_X86, capstone.CS_MODE_64)
+    cs = capstone_gt.Cs(capstone_gt.CS_ARCH_X86, capstone_gt.CS_MODE_64)
     # xor %eax, %eax; xor %ecx, %ecx
     disasm = tuple(cs.disasm(b"\x31\xC0\x31\xC9", 0))
     assert len(disasm) == 2
