@@ -2,6 +2,7 @@
 - Fixed an issue where running rewriting over leaf functions multiple times
   could cause the red zone to be clobbered on 64-bit ELF
 - Updated to new ARM symbolic expression types
+- Switched to capstone-gt
 
 0.0.21:
 - Added support for symbolic expressions in data.
